:construction: resolved line warnings and added new "harmony" class balancing bosses